// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ContactPersonNameField> - selects item with keystrokes 1`] = `
"<ContactPersonNameField name=\\"x\\" organisationId=\\"abc\\">
  <ContactPersonName name=\\"x\\" organisationId=\\"abc\\" id=\\"uniforms-0000-000y\\" disabled={false} label=\\"\\" placeholder=\\"\\" showInlineError={false} changed={false} error={null} errorMessage=\\"\\" field={{ type: [Function: String], optional: false, label: 'X' }} fieldType={[Function: String]} fields={[]} onChange={[Function]} value=\\"n\\" required={true}>
    <section required={true}>
      <div className=\\"autocomplete-container\\">
        <input disabled={false} id=\\"uniforms-0000-000y\\" name=\\"x\\" onChange={[Function: onChangeInternal]} placeholder=\\"Search and add contact persons...\\" type=\\"text\\" value=\\"n\\" onKeyDown={[Function: onAutocompleteKeyDown]} onBlur={[Function: onBlurAutoComplete]} />
        <Autocomplete query=\\"n\\" itemSelected={[Function: itemSelected]} selectedItem={-1} suggestions={[ { name: 'name', email: 'a@b.nl', phone: 'p' } ]} personIndex={0} className=\\"\\">
          <section className=\\"autocomplete \\">
            <table className=\\"result\\">
              <tbody>
                <tr className=\\"\\" onClick={[Function: onClick]}>
                  <td>
                    <span>
                      <span className=\\"matched\\">
                        n
                      </span>
                      ame
                    </span>
                  </td>
                  <td>
                    a@b.nl
                  </td>
                </tr>
              </tbody>
            </table>
          </section>
        </Autocomplete>
      </div>
    </section>
  </ContactPersonName>
</ContactPersonNameField>"
`;

exports[`<ContactPersonNameField> - selects item with keystrokes 2`] = `
"<ContactPersonNameField name=\\"x\\" organisationId=\\"abc\\">
  <ContactPersonName name=\\"x\\" organisationId=\\"abc\\" id=\\"uniforms-0000-000y\\" disabled={false} label=\\"\\" placeholder=\\"\\" showInlineError={false} changed={false} error={null} errorMessage=\\"\\" field={{ type: [Function: String], optional: false, label: 'X' }} fieldType={[Function: String]} fields={[]} onChange={[Function]} value=\\"n\\" required={true}>
    <section required={true}>
      <div className=\\"autocomplete-container\\">
        <input disabled={false} id=\\"uniforms-0000-000y\\" name=\\"x\\" onChange={[Function: onChangeInternal]} placeholder=\\"Search and add contact persons...\\" type=\\"text\\" value=\\"n\\" onKeyDown={[Function: onAutocompleteKeyDown]} onBlur={[Function: onBlurAutoComplete]} />
      </div>
    </section>
  </ContactPersonName>
</ContactPersonNameField>"
`;
